Make compatibility fixes for the latest build of VS2017

--- a/src/scheme/package.props
+++ b/src/scheme/package.props
@@ -1,4 +1,4 @@
-﻿<Project ToolsVersion="15.0">
+﻿<Project>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <DocumentationFile>$(OutputPath)$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -6,6 +6,6 @@
     <PackageLicenseUrl>https://github.com/alexanderkozlenko/jsonrpcnet/blob/master/LICENSE</PackageLicenseUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/alexanderkozlenko/jsonrpcnet/master/etc/img/nuget.png</PackageIconUrl>
     <Authors><![CDATA[JSON-RPC.NET Team]]></Authors>
-    <PackageTags><![CDATA[json rpc]]></PackageTags>
+    <PackageTags><![CDATA[json json-rpc rpc]]></PackageTags>
   </PropertyGroup>
 </Project>
