--- a/src/System.Data.JsonRpc.Tests/System.Data.JsonRpc.Tests.csproj
+++ b/src/System.Data.JsonRpc.Tests/System.Data.JsonRpc.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\scheme\solution.props" />
   <PropertyGroup>
     <OutputType>exe</OutputType>
@@ -8,14 +8,16 @@
     <EmbeddedResource Include=".\Assets\*.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\System.Data.JsonRpc\System.Data.JsonRpc.csproj" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="3.0.0-beta002-build000066" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170125-04" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-    <PackageReference Include="System.Buffers" Version="4.3.0" />
     <PackageReference Include="xunit" Version="2.2.0-beta5-build3474" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0-beta5-build1225" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\System.Data.JsonRpc\System.Data.JsonRpc.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 </Project>
