--- a/src/scheme/package.props
+++ b/src/scheme/package.props
@@ -3,8 +3,8 @@
     <DocumentationFile>$(OutputPath)$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/alexanderkozlenko/jsonrpcnet</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/alexanderkozlenko/jsonrpcnet/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/alexanderkozlenko/jsonrpcnet/master/etc/img/nuget.png</PackageIconUrl>
+    <PackageLicenseUrl>https://raw.github.com/alexanderkozlenko/jsonrpcnet/master/LICENSE</PackageLicenseUrl>
+    <PackageIconUrl>https://raw.github.com/alexanderkozlenko/jsonrpcnet/master/etc/img/nuget.png</PackageIconUrl>
     <Authors><![CDATA[JSON-RPC.NET Team]]></Authors>
     <PackageTags><![CDATA[json json-rpc rpc]]></PackageTags>
   </PropertyGroup>
