--- a/src/scheme/package.props
+++ b/src/scheme/package.props
@@ -2,9 +2,10 @@
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <DocumentationFile>$(OutputPath)$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <PackageProjectUrl>https://github.com/alexanderkozlenko/jsonrpcnet</PackageProjectUrl>
-    <PackageLicenseUrl>https://raw.github.com/alexanderkozlenko/jsonrpcnet/master/LICENSE</PackageLicenseUrl>
-    <PackageIconUrl>https://raw.github.com/alexanderkozlenko/jsonrpcnet/master/etc/img/nuget.png</PackageIconUrl>
+    <RepositoryPath><![CDATA[alexanderkozlenko/jsonrpcnet]]></RepositoryPath>
+    <PackageProjectUrl>https://github.com/$(RepositoryPath)</PackageProjectUrl>
+    <PackageLicenseUrl>https://raw.github.com/$(RepositoryPath)/master/LICENSE</PackageLicenseUrl>
+    <PackageIconUrl>https://raw.github.com/$(RepositoryPath)/master/etc/img/nuget.png</PackageIconUrl>
     <Authors><![CDATA[JSON-RPC.NET Team]]></Authors>
     <PackageTags><![CDATA[json json-rpc rpc]]></PackageTags>
   </PropertyGroup>
