--- a/src/scheme/package.props
+++ b/src/scheme/package.props
@@ -1,12 +1,20 @@
 ﻿<Project>
+  <Import Project=".\solution.props" />
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <DocumentationFile>$(OutputPath)$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionSuffix>beta2</VersionSuffix>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <DebugType>none</DebugType>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Product><![CDATA[JSON-RPC.NET]]></Product>
+    <Description><![CDATA[JSON-RPC framework for .NET]]></Description>
+    <Authors><![CDATA[JSON-RPC.NET Team]]></Authors>
+    <Copyright><![CDATA[© JSON-RPC.NET Team. All rights reserved.]]></Copyright>
+    <PackageTags><![CDATA[json json-rpc rpc]]></PackageTags>
     <RepositoryPath><![CDATA[alexanderkozlenko/jsonrpcnet]]></RepositoryPath>
     <PackageProjectUrl>https://github.com/$(RepositoryPath)</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.github.com/$(RepositoryPath)/master/LICENSE</PackageLicenseUrl>
     <PackageIconUrl>https://raw.github.com/$(RepositoryPath)/master/etc/img/nuget.png</PackageIconUrl>
-    <Authors><![CDATA[JSON-RPC.NET Team]]></Authors>
-    <PackageTags><![CDATA[json json-rpc rpc]]></PackageTags>
   </PropertyGroup>
 </Project>
