--- a/src/System.Data.JsonRpc.Tests/System.Data.JsonRpc.Tests.csproj
+++ b/src/System.Data.JsonRpc.Tests/System.Data.JsonRpc.Tests.csproj
@@ -9,8 +9,8 @@
     <EmbeddedResource Include=".\Assets\*.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FakeItEasy" Version="3.0.0-rc001-build000097" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170217-05" />
+    <PackageReference Include="FakeItEasy" Version="3.0.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0-preview-20170222-09" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
