--- a/src/scheme/solution.package.props
+++ b/src/scheme/solution.package.props
@@ -2,7 +2,7 @@
   <Import Project=".\solution.props" />
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <VersionPrefix>1.0.0</VersionPrefix>
-    <VersionSuffix>beta4</VersionSuffix>
+    <VersionSuffix></VersionSuffix>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <DebugType>none</DebugType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
