--- a/.editorconfig
+++ b/.editorconfig
@@ -5,8 +5,6 @@ indent_style = space
 indent_size = 4
 [*.props]
 indent_size = 2
-[*.sln]
-indent_style = tab
 [*.csproj]
 indent_size = 2
 [*.cs]
@@ -23,12 +21,12 @@ dotnet_style_null_propagation = true:suggestion
 csharp_style_var_for_built_in_types = true:error
 csharp_style_var_when_type_is_apparent = true:suggestion
 csharp_style_var_elsewhere = true:error
-csharp_style_expression_bodied_methods = true:suggestion
-csharp_style_expression_bodied_constructors = true:suggestion
-csharp_style_expression_bodied_operators = true:suggestion
-csharp_style_expression_bodied_properties = true:suggestion
-csharp_style_expression_bodied_indexers = true:suggestion
-csharp_style_expression_bodied_accessors = true:suggestion
+csharp_style_expression_bodied_methods = false:suggestion
+csharp_style_expression_bodied_constructors = false:suggestion
+csharp_style_expression_bodied_operators = false:suggestion
+csharp_style_expression_bodied_properties = false:suggestion
+csharp_style_expression_bodied_indexers = false:suggestion
+csharp_style_expression_bodied_accessors = false:suggestion
 csharp_style_pattern_matching_over_is_with_cast_check = true:suggestion
 csharp_style_pattern_matching_over_as_with_null_check = true:suggestion
 csharp_style_inlined_variable_declaration = true:suggestion
