--- a/src/System.Data.JsonRpc.Tests/System.Data.JsonRpc.Tests.csproj
+++ b/src/System.Data.JsonRpc.Tests/System.Data.JsonRpc.Tests.csproj
@@ -7,7 +7,7 @@
     <EmbeddedResource Include=".\Assets\*.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FakeItEasy" Version="3.4.2" />
+    <PackageReference Include="FakeItEasy" Version="4.0.0-beta001" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="xunit" Version="2.3.0-beta3-build3705" />
