--- a/src/System.Data.JsonRpc.Tests/System.Data.JsonRpc.Tests.csproj
+++ b/src/System.Data.JsonRpc.Tests/System.Data.JsonRpc.Tests.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="$(MSBuildThisFileDirectory)../solution.props" />
+  <Import Project="$(MSBuildThisFileDirectory)../solution.props" />
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <OutputPath>$(RepositoryPath)/bin/bin/$(AssemblyName)/$(Configuration)/</OutputPath>
     <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <EmbeddedResource Include="./Assets/*.txt" />
+    <EmbeddedResource Include="./Assets/**/*" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="4.3.0" />
