Improve API for request parameters

--- a/src/System.Data.JsonRpc/System.Data.JsonRpc.csproj
+++ b/src/System.Data.JsonRpc/System.Data.JsonRpc.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <VersionPrefix>1.3.2</VersionPrefix>
-    <VersionSuffix></VersionSuffix>
+    <Version>1.4.0</Version>
     <Product><![CDATA[System.Data.JsonRpc]]></Product>
     <Description><![CDATA[Provides support for serialization and deserialization of JSON-RPC messages]]></Description>
     <Authors><![CDATA[Alexander Kozlenko]]></Authors>
@@ -16,10 +15,10 @@
     <BaseIntermediateOutputPath>$(RepositoryPath)/bin/obj/$(AssemblyName)/</BaseIntermediateOutputPath>
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)../solution.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>True</SignAssembly>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <DebugType>none</DebugType>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
