--- a/src/System.Data.JsonRpc/System.Data.JsonRpc.csproj
+++ b/src/System.Data.JsonRpc/System.Data.JsonRpc.csproj
@@ -1,11 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Version>1.4.1</Version>
-    <Product><![CDATA[System.Data.JsonRpc]]></Product>
+    <Version>1.4.2</Version>
     <Description><![CDATA[Provides support for serialization and deserialization of JSON-RPC messages]]></Description>
     <Authors><![CDATA[Alexander Kozlenko]]></Authors>
     <Copyright><![CDATA[© Alexander Kozlenko. All rights reserved.]]></Copyright>
-    <PackageTags><![CDATA[json-rpc]]></PackageTags>
+    <PackageTags><![CDATA[json-rpc json rpc]]></PackageTags>
     <PackageProjectUrl>https://github.com/alexanderkozlenko/json-rpc</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.github.com/alexanderkozlenko/json-rpc/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
