--- a/src/System.Data.JsonRpc.Benchmarks/System.Data.JsonRpc.Benchmarks.csproj
+++ b/src/System.Data.JsonRpc.Benchmarks/System.Data.JsonRpc.Benchmarks.csproj
@@ -3,6 +3,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <OutputPath>$(RepositoryPath)/bin/bin/$(AssemblyName)/$(Configuration)/</OutputPath>
+    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.10.11" />
