--- a/src/System.Data.JsonRpc/System.Data.JsonRpc.csproj
+++ b/src/System.Data.JsonRpc/System.Data.JsonRpc.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Version>1.7.0</Version>
-    <Description><![CDATA[Provides support for serialization and deserialization of JSON-RPC messages]]></Description>
+    <Description><![CDATA[Provides support for serialization and deserialization of JSON-RPC 2.0 messages]]></Description>
     <Authors><![CDATA[Alexander Kozlenko]]></Authors>
     <Copyright><![CDATA[© Alexander Kozlenko. All rights reserved.]]></Copyright>
     <PackageTags><![CDATA[json-rpc json rpc]]></PackageTags>
