--- a/src/System.Data.JsonRpc/System.Data.JsonRpc.csproj
+++ b/src/System.Data.JsonRpc/System.Data.JsonRpc.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Version>1.11.2</Version>
+    <Version>1.12.0</Version>
     <Description><![CDATA[Provides support for serializing and deserializing JSON-RPC 2.0 messages]]></Description>
     <Authors><![CDATA[Alexander Kozlenko]]></Authors>
     <Copyright><![CDATA[© Alexander Kozlenko. All rights reserved.]]></Copyright>
@@ -9,7 +9,7 @@
     <PackageLicenseUrl>https://raw.github.com/alexanderkozlenko/json-rpc/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFrameworks>netstandard1.1;netstandard2.0</TargetFrameworks>
     <OutputPath>$(RepositoryPath)/bin/bin/$(AssemblyName)/$(Configuration)/</OutputPath>
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)../Open.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>True</SignAssembly>
