--- a/src/System.Data.JsonRpc.Tests/System.Data.JsonRpc.Tests.csproj
+++ b/src/System.Data.JsonRpc.Tests/System.Data.JsonRpc.Tests.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <OutputPath>$(RepositoryPath)/bin/bin/$(AssemblyName)/$(Configuration)/</OutputPath>
-    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+    <OutputPath>$(RepositoryPath)\bin\bin\$(AssemblyName)\$(Configuration)\</OutputPath>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <EmbeddedResource Include="./Assets/**/*" />
+    <EmbeddedResource Include=".\Assets\**\*" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
@@ -13,6 +13,6 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../System.Data.JsonRpc/System.Data.JsonRpc.csproj" />
+    <ProjectReference Include="..\System.Data.JsonRpc\System.Data.JsonRpc.csproj" />
   </ItemGroup>
 </Project>
