Ported to Utf8Json serializer

--- a/src/System.Data.JsonRpc/System.Data.JsonRpc.csproj
+++ b/src/System.Data.JsonRpc/System.Data.JsonRpc.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Version>1.14.1</Version>
+    <Version>1.14.2</Version>
     <Description><![CDATA[Provides support for serializing and deserializing JSON-RPC 2.0 messages]]></Description>
     <Authors><![CDATA[Alexander Kozlenko]]></Authors>
     <Copyright><![CDATA[© Alexander Kozlenko. All rights reserved.]]></Copyright>
@@ -9,8 +9,7 @@
     <PackageLicenseUrl>https://raw.github.com/alexanderkozlenko/json-rpc/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.1;netstandard2.0</TargetFrameworks>
-    <OutputPath>$(RepositoryPath)\bin\bin\$(AssemblyName)\$(Configuration)\</OutputPath>
+    <TargetFrameworks>netstandard2.0;net45;net47</TargetFrameworks>
     <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)..\Open.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
@@ -21,5 +20,8 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Buffers" Version="4.5.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Utf8Json\src\Utf8Json\Utf8Json.csproj" />
   </ItemGroup>
 </Project>
