--- a/.editorconfig
+++ b/.editorconfig
@@ -23,14 +23,14 @@ csharp_style_var_elsewhere = true:warning
 csharp_style_var_for_built_in_types = true:warning
 csharp_style_var_when_type_is_apparent = true:warning
 csharp_style_deconstructed_variable_declaration = false:none
-csharp_style_expression_bodied_accessors = true:warning
-csharp_style_expression_bodied_constructors = false:warning
-csharp_style_expression_bodied_indexers = false:warning
-csharp_style_expression_bodied_methods = false:warning
-csharp_style_expression_bodied_operators = false:warning
-csharp_style_expression_bodied_properties = false:warning
+#csharp_style_expression_bodied_accessors = true:warning
+#csharp_style_expression_bodied_constructors = false:warning
+#csharp_style_expression_bodied_indexers = false:warning
+# csharp_style_expression_bodied_methods = false:warning
+# csharp_style_expression_bodied_operators = false:warning
+# csharp_style_expression_bodied_properties = false:warning
 csharp_style_pattern_local_over_anonymous_function = false:none
 csharp_style_throw_expression = false:none
-csharp_prefer_braces = true:warning
-csharp_preserve_single_line_blocks = false
-csharp_preserve_single_line_statements = false
+# csharp_prefer_braces = true:warning
+# csharp_preserve_single_line_blocks = false
+# csharp_preserve_single_line_statements = false
